--- a/OurNewProject/Views/Home/Index.cshtml
+++ b/OurNewProject/Views/Home/Index.cshtml
@@ -2,10 +2,6 @@
     ViewData["Title"] = "Home Page";
 }
 
-
-<!DOCTYPE html>
-<html lang="en">
-<title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name='viewport' content='width=device-width, initial-scale=1'>
@@ -14,30 +10,10 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="~/css/homepage.css" />
 
-<style>
-    body, h1, h2, h3, h4, h5, h6 {
-        font-family: "Lato", sans-serif
-    }
+<!DOCTYPE html>
 
-    .w3-bar, h1, button {
-        font-family: "Montserrat", sans-serif
-    }
-
-    .fa-anchor, .fa-coffee {
-        font-size: 200px
-    }
-
-    .hero-image {
-        background-image: url("../LOGO.jpeg");
-   @*     background-color: #cccccc;*@
-        height: 400px;
-        background-position: center;
-        background-repeat: no-repeat;
-       @* background-size: cover;*@
-        position: relative;
-    }
-</style>
 <body>
 
 
@@ -50,6 +26,7 @@
     <div class="w3-row-padding w3-container">
         <div class="w3-content">
             <div class="w3-twothird">
+                <br />
 
                 <h1 class="text-center">IZEI Ice Cream</h1>
                 <div class="w3-padding-32; text-center">
@@ -65,7 +42,7 @@
                     <h5 class="text-center">
                         אז מאחלים לכם הנאה מרבית וכמובן אם נהנתם ספרו לחבריכם,לא נהנתם? ספרו לנו !
                     </h5>
-                 
+
                 </div>
             </div>
 
@@ -89,20 +66,20 @@
                 <br />
                 <h1 class="text-center">IZEI Ice Cream</h1>
                 <div class="w3-padding-32">
-                      <h5 class="text-center">
-                     
-                          גלידת IZEI נוסדה ב2021 במסגרת פרויקט סיכום קורס אפליקציות במכללה למנהל בראשון לציון
-                      </h5>
+                    <h5 class="text-center">
+
+                        גלידת IZEI נוסדה ב2021 במסגרת פרויקט סיכום קורס אפליקציות במכללה למנהל בראשון לציון
+                    </h5>
                     <h5 class="text-center">
                         במסגרת הקורס למדנו HTML5,CSS,JavaScript
                     </h5>
                     <h5 class="text-center">
                         גלידת IZEI נוצרה בידי המפתחים איתי ביאזי וזהבה ליוייב אשר בנוסף לקוד המעולה יצרו גלידה ויוגורטים במגוון טעמים ייחודים שלא נראו לעולם בארץ !
                     </h5>
-                       <h5 class="text-center">
-                           מחכים לכם בסניפים ובמשלוחים !
+                    <h5 class="text-center">
+                        מחכים לכם בסניפים ובמשלוחים !
 
-                       </h5>
+                    </h5>
 
                 </div>
             </div>
@@ -113,18 +90,18 @@
         <h1 class="w3-margin w3-xlarge"> <b> במהלך היום שלך אכלת גלידת IZEI? כל השאר זה בונוס</b></h1>
     </div>
 
-  
+
 
     <script>
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else {
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
+        // Used to toggle the menu on small screens when clicking on the menu button
+        function myFunction() {
+            var x = document.getElementById("navDemo");
+            if (x.className.indexOf("w3-show") == -1) {
+                x.className += " w3-show";
+            } else {
+                x.className = x.className.replace(" w3-show", "");
+            }
+        }
     </script>
 
 </body>
