--- a/OurNewProject/Views/Home/Team.cshtml
+++ b/OurNewProject/Views/Home/Team.cshtml
@@ -7,7 +7,8 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-    <link rel="stylesheet" href="~/css/Team.css">
+@*    <link rel="stylesheet" href="~/css/Team.css">*@
+    <link rel="stylesheet" href="~/css/ourTeam.css">
 </head>
 <body>
     <pre>
@@ -34,7 +35,7 @@
                     <a target="_blank" href="https://www.linkedin.com/in/zehava-liviyev-23006a202/"><i class="fa fa-linkedin"></i></a>
                     <a target="_blank" href="https://www.facebook.com/profile.php?id=100003258770015"><i class="fa fa-facebook"></i></a>
                 </div>
-                <p><button>Contact</button></p>
+               
             </div>
 
             <div class="card">
@@ -46,7 +47,7 @@
                     <a  target="_blank" href="https://www.linkedin.com/in/itay-bayazi-19961000/"><i class="fa fa-linkedin"></i></a>
                     <a  target="_blank" href="https://www.facebook.com/bayazi"><i class="fa fa-facebook"></i></a>
                 </div>
-                <p><button>Contact</button></p>
+                
             </div>
         </div>
     </haz>
