--- a/OurNewProject/Views/Shared/_Layout.cshtml
+++ b/OurNewProject/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 <body >
 
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm box-shadow mb-3 " style="background-color:#090e46">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm box-shadow mb-3 " style="background-color:#090e46;">
             <div class="container">
 
 
@@ -127,8 +127,15 @@
         <div class="w3-button" id="to-top" style="color:#d6d6a2" title="back to top"> <b> ↑ </b> </div>
 
         <div class="w3-xlarge w3-section">
-
-
+            
+            <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
+            <div class="text-center p-t-8 p-b-31">
+                <a href="#">
+                    <div class="fb-like" data-href="https://www.facebook.com/IZEI-Ice-Cream-752659138801831/?ref=pages_you_manage" data-width="" data-action="like" data-size="small" data-share="true"></div>
+                    <!---->
+                </a>
+            </div>
+            
             <a target="_blank" style="color:#d6d6a2" href="https://www.facebook.com/IZEI-Ice-Cream-752659138801831/?ref=pages_you_manage"><i style="color:#d6d6a2" class="fa fa-facebook-official "></i></a>
         </div>
 
