--- a/OurNewProject/wwwroot/css/Create.css
+++ b/OurNewProject/wwwroot/css/Create.css
@@ -1,4 +1,5 @@
-﻿*, *:before, *:after {
+﻿
+*, *:before, *:after {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
