--- a/OurNewProject/Views/Home/About.cshtml
+++ b/OurNewProject/Views/Home/About.cshtml
@@ -11,15 +11,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bona+Nova:ital@0;1&display=swap" rel="stylesheet">
-    <style>
-         coco{
-             background-color:black;
-         }
-    </style>
-
+   
 </head>
 
-<div class="text-center;coco" style=" font-family: 'Bona Nova' , serif;">
+<div class="text-center" style=" font-family: 'Bona Nova' , serif;">
 
     <u1>
         <div>
@@ -94,17 +89,3 @@
         </div>
     </u1>
 </div>
-
-
-<canvas id="myCanvas">
-</canvas>
-<script>
-    var c = document.getElementById("myCanvas");
-    var ctx = c.getContext("2d");
-    ctx.font = "bold 23px Papyrus,sans-Serif";
-    ctx.fillStyle = "white";
-    //ctx.textAlign = "center";
-    ctx.font
-    ctx.fillText("Thanks for supporting Us", 10, 100);
-</script>
-
