--- a/OurNewProject/Views/Home/Gallery.cshtml
+++ b/OurNewProject/Views/Home/Gallery.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Gallery";
-}
+﻿@{ ViewData["Title"] = "Gallery"; }
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -110,28 +108,24 @@
         <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229501630_759562471444831_7690157138162969024_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=0debeb&_nc_ohc=T23xMcDN5rEAX9QcsQs&_nc_ht=scontent-lhr8-1.xx&oh=7fed4a03088e58730617ed6302b7aa8e&oe=610EC67F" alt="Nature" style="width:100%">
         <span onclick="this.parentElement.style.display='none'"
               class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">הגלידות החדשות שלנו עכשיו גם בכוסות</div>
     </div>
 
     <div id="Snow" class="picture w3-display-container" style="display:none">
         <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229531581_759540598113685_7422575870667849746_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=0debeb&_nc_ohc=Kz3nK9emewkAX_QLfPy&_nc_ht=scontent-lhr8-1.xx&oh=1026ceb5cb37c7e31cb57e7a1c33f60e&oe=610E2819" alt="Snow" style="width:100%">
         <span onclick="this.parentElement.style.display='none'"
               class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">גלידות הוניל במגוון תוספות</div>
     </div>
 
     <div id="Mountains" class="picture w3-display-container" style="display:none">
         <img src="https://scontent-amt2-1.xx.fbcdn.net/v/t39.30808-6/229632199_759562694778142_5668457114229626653_n.jpg?_nc_cat=109&ccb=1-3&_nc_sid=0debeb&_nc_ohc=BzpMVb1RJP0AX-RAxHL&tn=wxpTeNlE5G1ozxO5&_nc_ht=scontent-amt2-1.xx&oh=a7b0f2934b783d49a4fa9865174718ff&oe=610EE7DF" alt="Mountains" style="width:100%">
         <span onclick="this.parentElement.style.display='none'"
               class="w3-display-topright w3-button w3-transparent">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">הקלאסיות בגביע</div>
     </div>
 
     <div id="Lights" class="picture w3-display-container" style="display:none">
         <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229474658_759540551447023_7312188446564595625_n.jpg?_nc_cat=106&ccb=1-3&_nc_sid=0debeb&_nc_ohc=W1bwiwB-u3kAX_Qf-fD&_nc_ht=scontent-lhr8-1.xx&oh=f8d9c3d2ff07204efb2eeeb800fd7bf6&oe=610E5F38" alt="Lights" style="width:100%">
         <span onclick="this.parentElement.style.display='none'"
               class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">המהדורה הורודה</div>
     </div>
 
 
@@ -139,53 +133,45 @@
         <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/l/t39.30808-6/229810793_759540608113684_778847689812759402_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=0debeb&_nc_ohc=bVGZn5CgW7EAX_FNO2v&_nc_ht=scontent-lhr8-1.xx&oh=14100b95eb1aeb608ac84fa8017e6571&oe=610EAA5D" alt="Lights" style="width:100%">
         <span onclick="this.parentElement.style.display='none'"
               class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
     </div>
 
     <div id="AAAA" class="picture w3-display-container" style="display:none">
         <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229594621_759926154741796_1721906230292983362_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=0debeb&_nc_ohc=XaUL5gQBc_4AX94-O46&_nc_ht=scontent-lhr8-1.xx&oh=9490cd3a09dee03d8f7c49fd4d4c91a0&oe=610E24A6" alt="Lights" style="width:100%">
         <span onclick="this.parentElement.style.display='none'"
               class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
     </div>
 
     <div id="AB" class="picture w3-display-container" style="display:none">
         <img src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/229847203_759926168075128_7649921516402113760_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=0debeb&_nc_ohc=fIe94PPXzJcAX9urlhx&_nc_ht=scontent-lhr8-2.xx&oh=89921211a188abf473676e1dd98c7bae&oe=610E7804" alt="Lights" style="width:100%">
         <span onclick="this.parentElement.style.display='none'"
               class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
     </div>
 
     <div id="AC" class="picture w3-display-container" style="display:none">
         <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229621026_759926144741797_4101303508073058839_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=0debeb&_nc_ohc=0aGukuyJ7m4AX8kqNnB&_nc_ht=scontent-lhr8-1.xx&oh=5726bb8204198b9eeda218c98c761b4e&oe=610DF104" alt="Lights" style="width:100%">
         <span onclick="this.parentElement.style.display='none'"
               class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
     </div>
 
     <div id="CC" class="picture w3-display-container" style="display:none">
         <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229623021_759926138075131_6621276716496743383_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=0debeb&_nc_ohc=cZ2Br9biVxYAX8sqY3E&tn=wxpTeNlE5G1ozxO5&_nc_ht=scontent-lhr8-1.xx&oh=381f78fca50a2dda446fd39450e0345f&oe=610E404B" alt="Lights" style="width:100%">
         <span onclick="this.parentElement.style.display='none'"
               class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
     </div>
     <div id="CA" class="picture w3-display-container" style="display:none">
         <img src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/229592165_759562531444825_4481430567461830317_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=0debeb&_nc_ohc=-xtrGyZqgn0AX__IsuG&tn=wxpTeNlE5G1ozxO5&_nc_ht=scontent-lhr8-2.xx&oh=0a052a5de5a3a2c4cc372864e4857839&oe=610EB44D" alt="Lights" style="width:100%">
         <span onclick="this.parentElement.style.display='none'"
               class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
     </div>
     <div id="CB" class="picture w3-display-container" style="display:none">
         <img src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/229740421_759926131408465_8626621989273258080_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=0debeb&_nc_ohc=BrYpbmIoUY4AX98r3yp&_nc_ht=scontent-lhr8-2.xx&oh=56daa98c63aff718ff09c98ab4bb8f66&oe=610EFD87" alt="Lights" style="width:100%">
         <span onclick="this.parentElement.style.display='none'"
               class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
     </div>
     <div id="CD" class="picture w3-display-container" style="display:none">
         <img src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/229516998_759540521447026_8095770234471271744_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=0debeb&_nc_ohc=pkzvwawQwMoAX-M6sxE&_nc_ht=scontent-lhr8-2.xx&oh=92c547697097ae2f0b736045ca6bb2a7&oe=610E985D" alt="Lights" style="width:100%">
         <span onclick="this.parentElement.style.display='none'"
               class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
     </div>
 
 
