--- a/OurNewProject/Views/Suppliers/Edit.cshtml
+++ b/OurNewProject/Views/Suppliers/Edit.cshtml
@@ -23,6 +23,11 @@
                 <input asp-for="Phone" class="form-control" />
                 <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
+            <div>
+                <label asp-for="myBranches" class="control-label"></label>
+                <select multiple asp-for="myBranches" class="form-control" asp-items="@ViewBag.Branch"></select>
+                <span asp-validation-for="myBranches" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
