--- a/OurNewProject/Views/Products/Edit.cshtml
+++ b/OurNewProject/Views/Products/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1 style="color: #d6d6a2" class="text-center">עריכה</h1>
 
-<h4>Product</h4>
+<h4 style="color: #d6d6a2" class="text-center">מוצר</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,7 +28,7 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
+           <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
                 <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
