--- a/OurNewProject/Views/Shared/_Layout.cshtml
+++ b/OurNewProject/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
 
 
                             <li class="nav-item dropdown">
-                                <a style="font-family: 'Bona Nova', serif; color: #d6d6a2" class="btn dropdown-toggle; text-right" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                                <a style="font-family: 'Bona Nova', serif; color: #d6d6a2; font-size: medium;" class="btn dropdown-toggle; text-right" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                                     אפשריות מנהלים
                                 </a>
                                 <ul style="background-color:#090e46" class="dropdown-menu" aria-labelledby="navbarDropdown">
