--- a/OurNewProject/Views/Home/YouKnow.cshtml
+++ b/OurNewProject/Views/Home/YouKnow.cshtml
@@ -39,13 +39,13 @@
         <div class="container">
             <div class="card">
                 <div class="card-header">
-                    <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/226864359_754623895272022_7310758689881530843_n.png?_nc_cat=104&ccb=1-3&_nc_sid=730e14&_nc_ohc=DYiZqtE_J-0AX9eoeD4&_nc_ht=scontent.ftlv6-1.fna&oh=d3d21cef9c8ca678161295768a76d477&oe=6108E11A" alt="rover" />
+                    <img src="https://scontent.ftlv5-1.fna.fbcdn.net/v/t1.6435-9/235247555_107783118283609_2454593262504835045_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=0debeb&_nc_ohc=isZVrd0U88YAX-bgwc8&_nc_ht=scontent.ftlv5-1.fna&oh=c2e1c0e86849316ef436f9c48fb9dd97&oe=61430D6A" alt="rover" />
                 </div>
                 <div class="card-body">
                     <span style="font-family: 'Bona Nova', serif;" class="tag tag-teal">
                         איפה נולדתי?
                     </span>
-                    <h4  style="font-family: 'Bona Nova', serif;color: #090e46" class="text-center">
+                    <h4 style="font-family: 'Bona Nova', serif;color: #090e46" class="text-center">
                         הגלידה הראשונה לא הומצאה באיטליה כמו שנהוג לחשוב, אלא בסין.
                         היא הייתה פשוט ערבוב של מיצי פירות עם קרח.
                     </h4>
@@ -69,7 +69,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/226836191_754623961938682_7373053499286711741_n.png?_nc_cat=105&ccb=1-3&_nc_sid=730e14&_nc_ohc=RNUs1fZevEEAX9KygqV&_nc_ht=scontent.ftlv6-1.fna&oh=808881db7eeda26e4c0ee3728b38cf23&oe=6108BC0F" alt="city" />
+                    <img src="https://scontent.ftlv5-1.fna.fbcdn.net/v/t1.6435-9/234836313_107783094950278_2587115382890297354_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=0debeb&_nc_ohc=zN3uErk5214AX-g-F5j&_nc_ht=scontent.ftlv5-1.fna&oh=f565f67da2e82e0e8338c90a4f23bc0c&oe=61409075" alt="city" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-pink">
@@ -85,7 +85,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/227103351_754623901938688_4489645589254305236_n.png?_nc_cat=111&ccb=1-3&_nc_sid=730e14&_nc_ohc=l4I78R5J6aUAX-HC8P9&_nc_ht=scontent.ftlv6-1.fna&oh=5f90f3b430993616dcfba7d97c4bb7b6&oe=610889BE" alt="city" />
+                    <img src="https://scontent.ftlv5-1.fna.fbcdn.net/v/t1.6435-9/235702908_107783061616948_6943558175537987657_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=0debeb&_nc_ohc=TEPb4IHxh08AX-4wN_0&_nc_ht=scontent.ftlv5-1.fna&oh=9c938c7043f8735508c00e64ecd182d6&oe=61426DE9" alt="city" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-pink">
@@ -127,7 +127,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/226788526_754623908605354_2388674748591718896_n.png?_nc_cat=108&ccb=1-3&_nc_sid=730e14&_nc_ohc=Ezab363Vp8IAX8qn3sx&tn=BACNfLudBkk3VGcy&_nc_ht=scontent.ftlv6-1.fna&oh=4e192ad4ca76d2fa977a6585b1e78696&oe=6108AB71" alt="city" />
+                    <img src="https://scontent.ftlv5-1.fna.fbcdn.net/v/t1.6435-9/235260084_107783014950286_4037703559554965442_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=0debeb&_nc_ohc=6IFQC6Ep5_sAX_lVeE_&_nc_ht=scontent.ftlv5-1.fna&oh=02ecfb5293692fc2eca3cb9c63c1c4dd&oe=61425038" alt="city" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-teal">
@@ -142,7 +142,7 @@
             </div>
 
 
-           
+
         </div>
     </div>
 </body>
