--- a/OurNewProject/Views/Shared/_Layout.cshtml
+++ b/OurNewProject/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
             <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
             <div class=" p-t-8 p-b-31" style="color:aliceblue">
                 <a href="#">
-                    <div class="fb-like" data-href="https://www.facebook.com/IZEI-Ice-Cream-752659138801831/?ref=pages_you_manage" data-width="" data-action="like" data-size="small" data-share="true"></div>
+                    <div class="fb-like" data-href="https://www.facebook.com/IZEI-Ice-Cream-107770158284905" data-width="" data-action="like" data-size="small" data-share="true"></div>
                     <!---->
                 </a>
             </div>
@@ -114,7 +114,7 @@
 
 
         <div class="w3-xlarge w3-section">
-            <a target="_blank" style="color:#d6d6a2" href="https://www.facebook.com/IZEI-Ice-Cream-752659138801831/?ref=pages_you_manage"><i style="color:#d6d6a2" class="fa fa-facebook-official "></i></a>
+            <a target="_blank" style="color:#d6d6a2" href="https://www.facebook.com/IZEI-Ice-Cream-107770158284905"><i style="color:#d6d6a2" class="fa fa-facebook-official "></i></a>
         </div>
 
 
