--- a/OurNewProject/Views/Home/Team.cshtml
+++ b/OurNewProject/Views/Home/Team.cshtml
@@ -39,7 +39,7 @@
             </div>
 
             <div class="card">
-                <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t1.6435-9/53110596_10217982135815617_3433887032449957888_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=730e14&_nc_ohc=WZ3NcAFl5wYAX97wVjL&_nc_ht=scontent.ftlv6-1.fna&oh=e0063fb11036e88c39ba6bf12f6206f9&oe=61284E42" alt="Itay" style="width:100%">
+                <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t1.6435-9/50820924_10217694103334985_5407325716419182592_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=w2lczgndVagAX-gZOz-&_nc_ht=scontent.ftlv6-1.fna&oh=d04d45835b908aa320452ba3af197ff1&oe=614F7C06" alt="Itay" style="width:100%">
                 <h1>Itay Bayazi</h1>
                 <p class="title">Web Developer</p>
                 <p>The College of Management Academic Studies</p>
