--- a/OurNewProject/Views/Home/YouKnow.cshtml
+++ b/OurNewProject/Views/Home/YouKnow.cshtml
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="card">
                 <div class="card-header">
-                    <img src="https://scontent.ftlv5-1.fna.fbcdn.net/v/t1.6435-9/235247555_107783118283609_2454593262504835045_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=0debeb&_nc_ohc=isZVrd0U88YAX-bgwc8&_nc_ht=scontent.ftlv5-1.fna&oh=c2e1c0e86849316ef436f9c48fb9dd97&oe=61430D6A" alt="rover" />
+                    <img src="https://scontent.ftlv5-1.fna.fbcdn.net/v/t1.6435-9/235247555_107783118283609_2454593262504835045_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=0debeb&_nc_ohc=lPm0lTpDEzEAX9Zdv11&_nc_ht=scontent.ftlv5-1.fna&oh=2fe3442e05c1bd5257b3d3fdf1283393&oe=616E8EEA" alt="rover" />
                 </div>
                 <div class="card-body">
                     <span style="font-family: 'Bona Nova', serif;" class="tag tag-teal">
@@ -69,7 +69,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://scontent.ftlv5-1.fna.fbcdn.net/v/t1.6435-9/234836313_107783094950278_2587115382890297354_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=0debeb&_nc_ohc=zN3uErk5214AX-g-F5j&_nc_ht=scontent.ftlv5-1.fna&oh=f565f67da2e82e0e8338c90a4f23bc0c&oe=61409075" alt="city" />
+                    <img src="https://scontent.ftlv5-1.fna.fbcdn.net/v/t1.6435-9/234836313_107783094950278_2587115382890297354_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=0debeb&_nc_ohc=aB5OGWmYf3QAX_KiY35&_nc_ht=scontent.ftlv5-1.fna&oh=60b86f4ccfcf68825fe1cdcc9376bbed&oe=61700675" alt="city" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-pink">
@@ -85,7 +85,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://scontent.ftlv5-1.fna.fbcdn.net/v/t1.6435-9/235702908_107783061616948_6943558175537987657_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=0debeb&_nc_ohc=TEPb4IHxh08AX-4wN_0&_nc_ht=scontent.ftlv5-1.fna&oh=9c938c7043f8735508c00e64ecd182d6&oe=61426DE9" alt="city" />
+                    <img src="https://scontent.ftlv5-1.fna.fbcdn.net/v/t1.6435-9/235702908_107783061616948_6943558175537987657_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=0debeb&_nc_ohc=VwHpamwyRd8AX9ohYzH&_nc_ht=scontent.ftlv5-1.fna&oh=a7321d30a1bada31363a79bf1c4a2e19&oe=616DEF69" alt="city" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-pink">
@@ -127,7 +127,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <img src="https://scontent.ftlv5-1.fna.fbcdn.net/v/t1.6435-9/235260084_107783014950286_4037703559554965442_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=0debeb&_nc_ohc=6IFQC6Ep5_sAX_lVeE_&_nc_ht=scontent.ftlv5-1.fna&oh=02ecfb5293692fc2eca3cb9c63c1c4dd&oe=61425038" alt="city" />
+                    <img src="https://scontent.ftlv5-1.fna.fbcdn.net/v/t1.6435-9/235152393_107847024943885_3104939752352503796_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=GM1o-BdLgrwAX8Jr5dw&_nc_ht=scontent.ftlv5-1.fna&oh=4e400169537f0834c2360494ef23adcd&oe=616EAD35" alt="city" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-teal">
